# PythonPuff

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.py  environment.yml  pyproject.toml  utils.py
data/: ch4_exp.csv  sensor_locations.csv  sensor_locations_temp.csv  source_locations.csv
src/: GaussianPuff.py  __init__.py  interface_helpers.py  parser.py
src/PythonPuff/: GaussianPuff.py  __init__.py  interface_helpers.py  parser.py
tests/: legacy_tests.py  test_dst.py  test_import.py  test_interface.py  test_parser.py  test_regression.py  test_special_params.py  utils.py
tests/input_data/: readme.txt
tests/parser/in/: dlq.in  exp_dlq.csv  exp_multi.csv  multi.in
tests/regression/: plot_reg_results.py  regression_test.in  test_cases.csv
tests/regression/in/: ADED22_sensors.csv  ADED22_sources.csv
tests/regression/ref/: 02-22-22_08:33_exp_0.csv  02-27-22_04:36_exp_1.csv  04-12-22_16:48_exp_3.csv  04-19-22_19:33_exp_2.csv
tests/test_data/: readme.txt
