[project]
name = "PythonPuff"
version = "0.0.1"
authors = [
  { name="Example Author", email="rfish@mines.edu" },
]
description = "A pure Python implementation of the FastGaussianPuff"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/rykerfish/PythonPuff"